fix icon alignment

--- a/landingPage/main.css
+++ b/landingPage/main.css
@@ -63,8 +63,14 @@ input {
     /* padding-left: 1.5rem; */
 }
 
-.product-info img {
-    padding-right: 2rem;
+.product-info {
+    padding-right: 1.8rem;
+}
+
+.icon {
+    display: flex;
+    align-items: center;
+    padding: 0 2rem;
 }
 
 /* h4 {
